Update all courses boxes style to match infant course box.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="reasons-box">
+                        <div class="reasons-box courses-box">
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
@@ -262,12 +262,47 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
                                     <h4>Courses for infants and children</h4>
-                                    <p>We pride ourselves on creating a fun and friendly learning environment,
-                                        and in getting to know all our students personally. </p>
+                                    <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
+                                        At Mortimer you will never be bored. </p>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner">
+                                            <div class="courses-day-icon-container">
+                                                <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>Monday to Friday</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner courses-time">
+                                            <div class="courses-day-icon-container courses-time-inner">
+                                                <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>9am to 12pm</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner courses-age">
+                                            <div class="courses-day-icon-container courses-age-inner">
+                                                <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>Age Range: 2 - 4</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="button-container">
+                                        <div class="button-container-inner">
+                                            <a href="courses.html"><h5>Find out more</h5></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="reasons-box">
+                        <div class="reasons-box courses-box">
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
@@ -278,8 +313,43 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
                                     <h4>Courses for infants and children</h4>
-                                    <p>We pride ourselves on creating a fun and friendly learning environment,
-                                        and in getting to know all our students personally. </p>
+                                    <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
+                                        At Mortimer you will never be bored. </p>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner">
+                                            <div class="courses-day-icon-container">
+                                                <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>Monday to Friday</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner courses-time">
+                                            <div class="courses-day-icon-container courses-time-inner">
+                                                <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>9am to 12pm</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner courses-age">
+                                            <div class="courses-day-icon-container courses-age-inner">
+                                                <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>Age Range: 2 - 4</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="button-container">
+                                        <div class="button-container-inner">
+                                            <a href="courses.html"><h5>Find out more</h5></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
