--- a/index.html
+++ b/index.html
@@ -252,18 +252,17 @@
                             </div>
                         </div>
                         <div class="reasons-box courses-box">
-                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
+                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-teenagers">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/children-are-interested-learning.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                        <img src="assets/images/children-teenagers-learning.jpg" class="courses-image" alt="Two children doing homework">
                                     </div>
                                 </div>
                             </div>
                             <div class="content-box" id="content-care">
-                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
-                                    <h4>Courses for infants and children</h4>
-                                    <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
-                                        At Mortimer you will never be bored. </p>
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-teenagers">
+                                    <h4>Courses for school children and teenagers</h4>
+                                    <p>Learn without fear, pressure and stress. Our courses are fun, lively and practical. </p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
@@ -280,7 +279,7 @@
                                                 <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>9am to 12pm</p>
+                                                <p>3pm to 5pm</p>
                                             </div>
                                         </div>
                                     </div>
@@ -290,7 +289,7 @@
                                                 <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>Age Range: 2 - 4</p>
+                                                <p>Age Range: 4 - 12</p>
                                             </div>
                                         </div>
                                     </div>
