--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
                                     <h4>Courses for infants and children</h4>
                                     <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
-                                        At Mortimer you will never be bored. </p>
+                                        At our Kids English Club you will never be bored. </p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
@@ -262,14 +262,15 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-teenagers">
                                     <h4>Courses for school children and teenagers</h4>
-                                    <p>Learn without fear, pressure and stress. Our courses are fun, lively and practical. </p>
+                                    <p>Learn without fear, pressure and stress. Our courses are fun, lively and practical. 
+                                        The best possible preparation for secondary school</p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
                                                 <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>Monday to Friday</p>
+                                                <p>Monday to Friday and Saturday</p>
                                             </div>
                                         </div>
                                     </div>
@@ -279,7 +280,7 @@
                                                 <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>3pm to 5pm</p>
+                                                <p>3pm to 5pm and 10am-2pm Saturday</p>
                                             </div>
                                         </div>
                                     </div>
@@ -302,18 +303,18 @@
                             </div>
                         </div>
                         <div class="reasons-box courses-box">
-                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
+                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-online">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/children-are-interested-learning.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                        <img src="assets/images/girl-learn-online.jpg" class="courses-image" alt="A girl is learning online and putting hand up">
                                     </div>
                                 </div>
                             </div>
                             <div class="content-box" id="content-care">
-                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
-                                    <h4>Courses for infants and children</h4>
-                                    <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
-                                        At Mortimer you will never be bored. </p>
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-online">
+                                    <h4>Online lessons for children</h4>
+                                    <p>Although you may not have the opportunity to attend one of our language schools in person, 
+                                        this is not a reason to stop learning English.</p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
@@ -330,7 +331,7 @@
                                                 <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>9am to 12pm</p>
+                                                <p>4pm to 8pm</p>
                                             </div>
                                         </div>
                                     </div>
@@ -340,7 +341,7 @@
                                                 <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>Age Range: 2 - 4</p>
+                                                <p>Age Range: 4 - 16</p>
                                             </div>
                                         </div>
                                     </div>
