--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <h2>Our English Clubs are full of joy!</h2>
             </div>
         </section>
+        <!-- About Us -->
         <div class="section-title-container">
             <section>
                 <div class="section-title" id="about-us">
@@ -73,49 +74,13 @@
                     </p>
                 </div>
             </section>
+            <!-- Reasons -->
             <section>
                 <div class="section-title" id="reasons">
                     <h2 class="nested">
                         <span class="headline">Why learn English with us?</span>
                     </h2>
                 </div>
-                <!-- </section>
-            <section class="image-description-side">
-                <div class="picholder-description-side">
-                    <img src="assets/images/portrait-professor-work-educational-system.jpg" class="section-image-portrait padding-right" 
-                            alt="Male teacher holding an opened book while teaching 3 students">
-                </div>
-                <div class="description-side">
-                    <h5 class="nested">Our caring approach</h5>
-                    <p class="reasons-text">We pride ourselves on creating a fun and friendly learning environment, 
-                        and in getting to know all our students personally. 
-                    </p>
-                </div>
-            </section>
-            <section class="image-description-side">
-                <div class="description-side">
-                    <h5 class="nested">Our expert tuition</h5>
-                    <p class="reasons-text">At Kids English Club, you are guaranteed a high-quality learning experience, 
-                        with some of the best teachers available.
-                    </p>
-                </div>
-                <div class="picholder-description-side">
-                    <img src="assets/images/smiley-teacher-classroom (1).jpg" class="section-image-portrait padding-left" 
-                            alt="Female teaching asking question to three students">
-                </div>
-            </section>
-            <section class="image-description-side">
-                <div class="picholder-description-side">
-                    <img src="assets/images/full-shot-smiley-girl-running-outdoors.jpg" class="section-image-portrait padding-right" 
-                            alt="Smiley girl running on grass">
-                </div>
-                <div class="description-side">
-                    <h5 class="nested">Our location</h5>
-                    <p class="reasons-text">Locating right in the heart of welcoming and friendly community of Narathiwat 
-                        we can offer ours students the best experience the town can offer.
-                    </p>
-                </div>
-            </section> -->
                 <section id="reasons-container">
                     <div id="section-container-inner">
                         <div class="reasons-box">
@@ -282,7 +247,7 @@
                                                 <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>3pm to 5pm and 10am-2pm Saturday</p>
+                                                <p>3pm to 5pm and 10am to 2pm Saturday</p>
                                             </div>
                                         </div>
                                     </div>
@@ -315,7 +280,7 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-online">
                                     <h4>Online lessons for children</h4>
-                                    <p>Although you may not have the opportunity to attend one of our language schools in person, 
+                                    <p>Although you may not have the opportunity to attend our language school in person, 
                                         this is not a reason to stop learning English.</p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
