Add div  box to wrap around first two reasons and apply flex for screen size 768px and larger.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 </div>
                 <section id="reasons-container">
                     <div id="section-container-inner">
+                        <!-- Wrap first two reason boxes -->
+                         <div class="wrap-two">
                         <div class="reasons-box">
                             <div class="reasons-colour-box shape-circle" id="reasons-colour-box-care">
                                 <div class="icon-box-container">
@@ -131,6 +133,8 @@
                                 </div>
                             </div>
                         </div>
+                         </div>
+                         <!-- End of wrap two -->
                         <div class="reasons-box">
                             <div class="reasons-colour-box shape-circle" id="reasons-colour-box-location">
                                 <div class="icon-box-container">
