Add max width 75% to reasons container for screen 768px and lager.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                          </div>
                          <!-- End of wrap two -->
-                        <div class="reasons-box">
+                        <div class="reasons-box" id="inverted-pyramid">
                             <div class="reasons-colour-box shape-circle" id="reasons-colour-box-location">
                                 <div class="icon-box-container">
                                     <div class="icon-box-wrapper">
