--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </h2>
                 </div>
                 <section id="reasons-container">
-                    <div id="section-container-inner">
+                    <div class="section-container-inner">
                         <!-- Wrap first two reason boxes -->
                          <div class="wrap-two">
                         <div class="reasons-box">
@@ -170,12 +170,12 @@
                 </section>
                 <!-- Courses Overview -->
                 <section id="reasons-container courses-container">
-                    <div id="section-container-inner courses-container">
+                    <div class="section-container-inner courses-container">
                         <div class="reasons-box courses-box">
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/children-are-interested-learning.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                        <img src="assets/images/infant-courses.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
                                     </div>
                                 </div>
                             </div>
@@ -226,7 +226,7 @@
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-teenagers">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/children-teenagers-learning.jpg" class="courses-image" alt="Two children doing homework">
+                                        <img src="assets/images/school-children-courses.jpg" class="courses-image" alt="Two children doing homework">
                                     </div>
                                 </div>
                             </div>
@@ -277,7 +277,7 @@
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-online">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/girl-learn-online.jpg" class="courses-image" alt="A girl is learning online and putting hand up">
+                                        <img src="assets/images/online-courses.jpg" class="courses-image" alt="A girl is learning online and putting hand up">
                                     </div>
                                 </div>
                             </div>
