Add index, icon and gallery folder to image folder and change file path for images.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="section-pic-description">
                     <div class="picholder">
                         <div class="inner-picholder">
-                            <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image"
+                            <img src="assets/images/index/smiley-teacher-classroom.jpg" class="section-image"
                             alt="Teacher smiling in a classroom with 3 students">
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/infant-courses.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                        <img src="assets/images/index/infant-courses.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
-                                                <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                <img src="assets/images/icon/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Monday to Friday</p>
@@ -197,7 +197,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-time">
                                             <div class="courses-day-icon-container courses-time-inner">
-                                                <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                                <img src="assets/images/icon/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>9am to 12pm</p>
@@ -207,7 +207,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-age">
                                             <div class="courses-day-icon-container courses-age-inner">
-                                                <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                                <img src="assets/images/icon/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 2 - 4</p>
@@ -226,7 +226,7 @@
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-teenagers">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/school-children-courses.jpg" class="courses-image" alt="Two children doing homework">
+                                        <img src="assets/images/index/school-children-courses.jpg" class="courses-image" alt="Two children doing homework">
                                     </div>
                                 </div>
                             </div>
@@ -238,7 +238,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
-                                                <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                <img src="assets/images/icon/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Monday to Friday and Saturday</p>
@@ -248,7 +248,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-time">
                                             <div class="courses-day-icon-container courses-time-inner">
-                                                <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                                <img src="assets/images/icon/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>3pm to 5pm and 10am to 2pm Saturday</p>
@@ -258,7 +258,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-age">
                                             <div class="courses-day-icon-container courses-age-inner">
-                                                <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                                <img src="assets/images/icon/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 4 - 12</p>
@@ -277,7 +277,7 @@
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-online">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
-                                        <img src="assets/images/online-courses.jpg" class="courses-image" alt="A girl is learning online and putting hand up">
+                                        <img src="assets/images/index/online-courses.jpg" class="courses-image" alt="A girl is learning online and putting hand up">
                                     </div>
                                 </div>
                             </div>
@@ -289,7 +289,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
-                                                <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                <img src="assets/images/icon/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Monday to Friday</p>
@@ -299,7 +299,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-time">
                                             <div class="courses-day-icon-container courses-time-inner">
-                                                <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                                <img src="assets/images/icon/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>4pm to 8pm</p>
@@ -309,7 +309,7 @@
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner courses-age">
                                             <div class="courses-day-icon-container courses-age-inner">
-                                                <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                                <img src="assets/images/icon/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
                                             </div>
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 4 - 16</p>
