--- a/picture-gallery.html
+++ b/picture-gallery.html
@@ -43,7 +43,47 @@
             <nav>
     </header>
     <!-- Main Content -->
-    <main>Main content</main>
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <ul>
+                    <li>
+                        <img src="assets/images/gallery/boy-library.jpg" alt="Smiling boy in red cap in library">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/boys-classroom.jpg" alt="Three students raise hand in a classroom">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/children-classroom.jpg" alt="Four students writing in a class room with a teacher">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/girl-learn-online.jpg" alt="A girl lerning online holding alphabet cards">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/girl-red-dress.jpg" alt="Smiling girl in a red dress in a library">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/girl-yellow-dress.jpg" alt="A girl in yellow dress learning alphabets">
+                    </li>   
+                    <li>
+                        <img src="assets/images/gallery/smiley-female-teacher.jpg" alt="Smiling female teacher with 3 students in a classroom">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/smiley-male-teacher.jpg" alt="Smiling male teacher holding a book">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/smiling-boy.jpg" alt="Smiling boy in front of a whiteboard">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/teeange-girl.jpg" alt="Smiling teenager girl wearing ornage headphone">
+                    </li>
+                    <li>
+                        <img src="assets/images/gallery/two-smiley -boys.jpg" alt="Two boys holding a book over their heads and smiling">
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
