Fix top magin for main for device screen size between 347px to 768px.

--- a/contact.html
+++ b/contact.html
@@ -26,24 +26,34 @@
                     <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
                 </div>
                 <div id="logo-name-container">
-                    <h1>Kids English club</h1>
+                    <h2>Kids English club</h2>
                 </div>
             </div>
         </a>
+        <!-- <div id="menu-container"> -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- </div> -->
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#about-us">About Us</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <nav>
     </header>
     <!-- Main Content -->
-    <main>Main Content</main>
+    <main>
+        <p id="alert warning">
+            "Please have a look at the mandatory field marked with an asterisk"
+            <img src="assets/images/contact/blue-asterisk.png" alt="Blue asterisk" width="10" height="10">
+        </p>
+        <section id="enquiry">
+
+        </section>
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
