--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </div>
             </div>
         </a>
-        <div id="menu-container">
+        <!-- <div id="menu-container"> -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        </div>
+        <!-- </div> -->
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
