--- a/contact.html
+++ b/contact.html
@@ -55,32 +55,30 @@
                 <h2>
                     <i class="fa-solid fa-circle-question"></i>Enquiry
                 </h2>
-                
-                <div class="radio-buttons">
-                    <div id="salutaion">
-                        Salutation:
-                    </div>
-                    <div>
-                        <input type="radio" name="salutation" id="salutation_mr" value="mr" required>
-                        <label for="salutation_mr">Mr.</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="salutation" id="salutation_mrs" value="mrs" required>
-                        <label for="salutation_mr">Mrs.</label>
-                    </div>
-                    <br>
-                    <label for="first-name">First Name:</label>
-                    <input type="text" name="first_name" id="first-name" class="text-input" required>
-                    <br>
-                    <label for="last-name">Last Name:</label>
-                    <input type="text" name="last_name" id="last-name" class="text-input" required>
-                    <br>
-                    <label for="email-address">Email Address:</label>
-                    <input type="email" name="email_address" id="email-address" class="text-input" required>
-                    <br>
-
-                </div>
-
+                <fieldset>
+                    <legend>Salutation:</legend>
+                    <input type="radio" name="salutation" id="salutation_mr" value="mr" required>
+                    <label for="salutation_mr">Mr.</label>
+                    <input type="radio" name="salutation" id="salutation_mrs" value="mrs" required>
+                    <label for="salutation_mr">Mrs.</label>
+                </fieldset>
+                <br>
+                <label for="first-name">First Name:</label>
+                <input type="text" name="first_name" id="first-name" class="input-field" required>
+                <br>
+                <label for="last-name">Last Name:</label>
+                <input type="text" name="last_name" id="last-name" class="input-field" required>
+                <br>
+                <label for="email-address">Email Address:</label>
+                <input type="email" name="email_address" id="email-address" class="input-field" required>
+                <br>
+                <label for="phone-number">Phone Number:</label>
+                <input type="number" name="phone_number" id="phone-number" class="input-field" required>
+                <br>
+                <label for="message">Message:</label> 
+                <textarea name="message" id="message" cols="10" rows="10" required></textarea>
+                <br>
+                <input class="submit-button" type="submit" value="Send">
             </form>
 
         </section>
