--- a/contact.html
+++ b/contact.html
@@ -46,23 +46,24 @@
     </header>
     <!-- Main Content -->
     <main>
-        <p id="alert warning">
-            "Please have a look at the mandatory field marked with an asterisk"
-            <img src="assets/images/contact/blue-asterisk.png" alt="Blue asterisk" width="10" height="10">
-        </p>
         <section id="enquiry">
             <form id="enquiry-form" action="" method="get">
                 <h2>
                     <i class="fa-solid fa-circle-question"></i>Enquiry
                 </h2>
-                <fieldset>
-                    <legend>Salutation:</legend>
-                    <input type="radio" name="salutation" id="salutation_mr" value="mr" required>
-                    <label for="salutation_mr">Mr.</label>
-                    <input type="radio" name="salutation" id="salutation_mrs" value="mrs" required>
-                    <label for="salutation_mr">Mrs.</label>
-                </fieldset>
-                <br>
+                <div id="salutation">
+                    <p>Salutation:</p>
+                </div>
+                    <div class="radio-buttons">
+                        <div>
+                            <input type="radio" name="salutation" id="salutation_mr" value="mr" required>
+                            <label for="salutation_mr">Mr.</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="salutation" id="salutation_mrs" value="mrs" required>
+                            <label for="salutation_mr">Mrs.</label>
+                        </div>
+                    </div>
                 <label for="first-name">First Name:</label>
                 <input type="text" name="first_name" id="first-name" class="input-field" required>
                 <br>
@@ -76,9 +77,8 @@
                 <input type="number" name="phone_number" id="phone-number" class="input-field" required>
                 <br>
                 <label for="message">Message:</label> 
-                <textarea name="message" id="message" cols="10" rows="10" required></textarea>
-                <br>
-                <input class="submit-button" type="submit" value="Send">
+                <textarea name="message" id="message" cols="20" rows="20" id="message" required></textarea>
+                <input class="send-button" type="submit" value="Send >>">
             </form>
 
         </section>
