--- a/contact.html
+++ b/contact.html
@@ -77,11 +77,17 @@
                 <input type="number" name="phone_number" id="phone-number" class="input-field" required>
                 <br>
                 <label for="message">Message:</label> 
-                <textarea name="message" id="message" cols="5" rows="5" id="message" required></textarea>
+                <textarea name="message" id="message" cols="10" rows="10" id="message" required></textarea>
                 <input class="send-button" type="submit" value="Send >>">
             </form>
-
         </section>
+        <section id="map-address">
+            <div id="map-wrapper">
+                <iframe id="map" src="https://bit.ly/3zfHsGF" width="100%" height="300"></iframe>
+               
+            </div>
+        </section>
+
     </main>
     <!-- Footer -->
     <footer>
