--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,21 @@
                 <input class="send-button" type="submit" value="Send >>">
             </form>
         </section>
-        <section id="map-address">
+        <section id="map-address-phone-email">
             <div id="map-wrapper">
                 <iframe id="map" src="https://bit.ly/3zfHsGF" width="100%" height="300"></iframe>
-               
+            </div>
+            <div id="address-wrapper">
+                <h2><i class="fa-solid fa-map-location-dot"></i>Address</h2>
+                <p>Kids English Club,<br>Lamiautit road,<br>Narathiwat<br>96000</p>
+            </div>
+            <div id="phone-wrapper">
+                <h2><i class="fa-solid fa-phone"></i></i>Phone:</h2>
+                <p>012 345 678 910</p>
+            </div>
+            <div id="email-wrapper"></div>
+                <h2><i class="fa-solid fa-envelope"></i></i></i>Email:</h2>
+                <p>email@kidsenglishclub.com</p>
             </div>
         </section>
 
