Remove icon and div boxes from contact detail

--- a/contact.html
+++ b/contact.html
@@ -81,21 +81,14 @@
                 <input class="send-button" type="submit" value="Send >>">
             </form>
         </section>
-        <section id="map-address-phone-email">
-            <div id="map-wrapper">
+        <section id="map-contact">
+            <div id="map-contact-wrapper">
                 <iframe id="map" src="https://bit.ly/3zfHsGF" width="100%" height="300"></iframe>
             </div>
-            <div id="address-wrapper">
-                <h2><i class="fa-solid fa-map-location-dot"></i>Address</h2>
+            <div id="contact">
                 <p>Kids English Club,<br>Lamiautit road,<br>Narathiwat<br>96000</p>
-            </div>
-            <div id="phone-wrapper">
-                <h2><i class="fa-solid fa-phone"></i></i>Phone:</h2>
-                <p>012 345 678 910</p>
-            </div>
-            <div id="email-wrapper"></div>
-                <h2><i class="fa-solid fa-envelope"></i></i></i>Email:</h2>
-                <p>email@kidsenglishclub.com</p>
+                <p>Phone: 012 345 678 910</p>
+                <p>Email: email@kidsenglishclub.com</p>
             </div>
         </section>
 
