Add style to contact detail for phone

--- a/contact.html
+++ b/contact.html
@@ -83,12 +83,15 @@
         </section>
         <section id="map-contact">
             <div id="map-contact-wrapper">
-                <iframe id="map" src="https://bit.ly/3zfHsGF" width="100%" height="300"></iframe>
-            </div>
-            <div id="contact">
-                <p>Kids English Club,<br>Lamiautit road,<br>Narathiwat<br>96000</p>
-                <p>Phone: 012 345 678 910</p>
-                <p>Email: email@kidsenglishclub.com</p>
+                <div id="map">
+                    <iframe id="map" src="https://bit.ly/3zfHsGF" width="100%" height="300"></iframe>
+                </div>
+                <div id="contact">
+                    <p>Kids English Club</p>
+                    <p>Address: Lamiautit road, Narathiwat 96000</p>
+                    <p>Phone: 012 345 678 910</p>
+                    <p>Email: email@kidsenglishclub.com</p>
+                </div>
             </div>
         </section>
 
