--- a/picture-gallery.html
+++ b/picture-gallery.html
@@ -26,16 +26,18 @@
                     <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
                 </div>
                 <div id="logo-name-container">
-                    <h1>Kids English club</h1>
+                    <h2>Kids English club</h2>
                 </div>
             </div>
         </a>
+        <!-- <div id="menu-container"> -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- </div> -->
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#about-us">About Us</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="picture-gallery.html" class="active">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
