Change section container id to class

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about-us">About Us</a></li>
+                <li><a href="index.html#about-us">About Us</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
