--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#about-us">About Us</a></li>
-                <li><a href="courses.html">Courses</a></li>
+                <li><a href="#courses-container">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -81,10 +81,10 @@
                         <span class="headline">Why learn English with us?</span>
                     </h2>
                 </div>
-                <section id="reasons-container">
+                <section class="section-container">
                     <div class="section-container-inner">
                         <!-- Wrap first two reason boxes -->
-                         <div class="wrap-two">
+                    <div class="wrap-two">
                         <div class="reasons-box">
                             <div class="reasons-colour-box shape-circle" id="reasons-colour-box-care">
                                 <div class="icon-box-container">
@@ -169,7 +169,7 @@
                     </div>
                 </section>
                 <!-- Courses Overview -->
-                <section id="reasons-container courses-container">
+                <section class="section-container" id="courses-container">
                     <div class="section-container-inner courses-container">
                         <div class="reasons-box courses-box">
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
