--- a/picture-gallery.html
+++ b/picture-gallery.html
@@ -38,7 +38,7 @@
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about-us">About Us</a></li>
-                <li><a href="courses.html">Courses</a></li>
+                <li><a href="index.html#courses-container">Courses</a></li>
                 <li><a href="picture-gallery.html" class="active">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
