Update address detail

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                 </div>
                 <div id="contact">
                     <p>Kids English Club</p>
-                    <p>Address: Lamiautit road, Narathiwat 96000</p>
+                    <p>Address: Lamaiutit road, Narathiwat 96000</p>
                     <p>Phone: 012 345 678 910</p>
                     <p>Email: email@kidsenglishclub.com</p>
                 </div>
