Add detail and style to courses-detail page

--- a/courses-detail.html
+++ b/courses-detail.html
@@ -26,24 +26,31 @@
                     <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
                 </div>
                 <div id="logo-name-container">
-                    <h1>Kids English club</h1>
+                    <h2>Kids English club</h2>
                 </div>
             </div>
         </a>
+        <!-- <div id="menu-container"> -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- </div> -->
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="courses.html" class="active">Courses</a></li>
+                <li><a href="index.html#about-us">About Us</a></li>
+                <li><a href="index.html#courses-container">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <nav>
     </header>
     <!-- Main Content -->
-    <main>Main content</main>
+    <main>
+        <div id="coming-soon">
+            <h1>Coming Soon</h1>
+            <h5>Stay tuned with us</h5>
+        </div>
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
