--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                     </div>
                                     <div class="button-container">
                                         <div class="button-container-inner">
-                                            <a href="courses.html"><h5>Find out more</h5></a>
+                                            <a href="courses-detail.html"><h5>Find out more</h5></a>
                                         </div>
                                     </div>
                                 </div>
@@ -267,7 +267,7 @@
                                     </div>
                                     <div class="button-container">
                                         <div class="button-container-inner">
-                                            <a href="courses.html"><h5>Find out more</h5></a>
+                                            <a href="courses-detail.html"><h5>Find out more</h5></a>
                                         </div>
                                     </div>
                                 </div>
@@ -318,7 +318,7 @@
                                     </div>
                                     <div class="button-container">
                                         <div class="button-container-inner">
-                                            <a href="courses.html"><h5>Find out more</h5></a>
+                                            <a href="courses-detail.html"><h5>Find out more</h5></a>
                                         </div>
                                     </div>
                                 </div>
