Update courses detail style

--- a/courses-detail.html
+++ b/courses-detail.html
@@ -47,8 +47,8 @@
     <!-- Main Content -->
     <main>
         <div id="coming-soon">
-            <h1>Coming Soon</h1>
-            <h5>Stay tuned with us</h5>
+            <h1 class="white">Coming Soon</h1>
+            <h5 class="white">Stay tuned with us</h5>
         </div>
     </main>
     <!-- Footer -->
