Add detail and style form submit acknowledge page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <!-- Main Content -->
     <main>
         <section id="enquiry">
-            <form id="enquiry-form" action="" method="get">
+            <form id="enquiry-form" action="form-submit-acknowledge.html" method="get">
                 <h2>
                     <i class="fa-solid fa-circle-question"></i>Enquiry
                 </h2>
