--- a/courses-detail.html
+++ b/courses-detail.html
@@ -40,15 +40,15 @@
                 <li><a href="index.html#about-us">About Us</a></li>
                 <li><a href="index.html#courses-container">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <nav>
     </header>
     <!-- Main Content -->
     <main>
         <div id="coming-soon">
-            <h1 class="white">Coming Soon</h1>
-            <h5 class="white">Stay tuned with us</h5>
+            <h1 class="white">Coming Soon!</h1>
+            <p class="white">Stay tuned with us</p>
         </div>
     </main>
     <!-- Footer -->
