--- a/courses-detail.html
+++ b/courses-detail.html
@@ -49,7 +49,11 @@
         <div id="coming-soon">
             <h1 class="white">Coming Soon!</h1>
             <p class="white">Stay tuned with us</p>
+            <div id="back-to-home">
+                <a href="index.html">Back to Home</a>
+            </div>
         </div>
+
     </main>
     <!-- Footer -->
     <footer>
