--- a/courses-detail.html
+++ b/courses-detail.html
@@ -50,7 +50,7 @@
             <h1 class="white">Coming Soon!</h1>
             <p class="white">Stay tuned with us</p>
             <div id="back-to-home">
-                <a href="index.html">Back to Home</a>
+                <a href="index.html"><h5>Back to Home</h5></a>
             </div>
         </div>
 
