Add back to home button to form gallery acknowledge page

--- a/form-submit-acknowledge.html
+++ b/form-submit-acknowledge.html
@@ -49,6 +49,9 @@
         <div id="coming-soon">
             <h1 class="white">Thank you!</h1>
             <p class="white">Your submission is received and we will contact you soon.</h5>
+            <div id="back-to-home">
+                <a href="index.html"><h5>Back to Home</h5></a>
+            </div>
         </div>
     </main>
     <!-- Footer -->
